# HashCode

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.cfg
HashCode-2020/: README.md  README_2020.md
HashCode-2020/src/PracticeProblem/: main.py
HashCode-2020/src/PracticeProblem/Input/: a_example.in  b_small.in  c_medium.in  d_quite_big.in  e_also_big.in
HashCode-2020/src/QualificationRound/: main.py
HashCode-2020/src/QualificationRound/Input/: a_example.txt  b_read_on.txt  c_incunabula.txt  d_tough_choices.txt  e_so_many_books.txt  f_libraries_of_the_world.txt
HashCode-2021/: README.md
HashCode-2021/PracticeProblem/: main.py
HashCode-2021/PracticeProblem/Input/: a_example.in  e_many_teams.in
HashCode-2021/src/PracticeProblem/Input/: b_little_bit_of_everything.in  c_many_ingredients.in  d_many_pizzas.in
HashCode-2022/: README.md
HashCode-2022/practice_problem/: main.py
HashCode-2022/practice_problem/input/: a_an_example.in.txt  b_basic.in.txt  c_coarse.in.txt  d_difficult.in.txt  e_elaborate.in.txt
src/PracticeProblem/: main.py
src/PracticeProblem/Perfect Output/: b_output.txt  c_output.txt  d_output.txt  e_output.txt
src/QualificationRound/: main.py
src/QualificationRound/Class/: Book.py  Library.py
