# see https://www.python.org/dev/peps/pep-0518/

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

############################################# Formatter ############################################

# Black is the uncompromising Python code formatter, see https://github.com/psf/black
[tool.black]
line-length = 120